--- a/project/test.ipynb
+++ b/project/test.ipynb
@@ -191,6 +191,8 @@
     "    else:\n",
     "        out_task1 = 0.2\n",
     "        rs_text = \"|||||||||\"\n",
+    "    title = ['Nhãn hiệu', 'Địa chỉ', 'Ngày', 'Tổng tiền']\n",
+    "    print(dict(zip(title, rs_text.split('|||'))))\n",
     "    return rs_text, out_task1\n",
     "\n"
    ]
@@ -204,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at vinai/phobert-base were not used when initializing RobertaModel: ['lm_head.decoder.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.bias']\n",
+      "Some weights of the model checkpoint at vinai/phobert-base were not used when initializing RobertaModel: ['lm_head.decoder.bias', 'lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
@@ -223,7 +225,7 @@
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -247,12 +249,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'Guitar Cafe', 'Địa chỉ': '28 Phan Chu Trinh, Hiệp Phú, Quận 9, Hồ Khu vực: Tâng trệt', 'Ngày': 'Ngày lập: 02/10/2020', 'Tổng tiền': ''}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -276,12 +285,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'TẠP HÓA PHƯƠNG ANH', 'Địa chỉ': 'Đ/c: Xóm 2 Thọ Bình - Tân Dân Khoái Châu - Hưng Yên', 'Ngày': 'Ngày 11/05/19', 'Tổng tiền': 'Khách hàng:'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -305,12 +321,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'BIDA TÂN AN PHÁT', 'Địa chỉ': '1925/15 Âu Cơ, Tân Sơn Nhì, Tân Phú Nha Phiếu Thanh Toán Trị P.Vụ:', 'Ngày': 'Ngày: 18/05 15:50-15:51', 'Tổng tiền': ''}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -334,12 +357,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'MINIMART ANAN', 'Địa chỉ': 'Và Chợ Sủi Phú Thị Gia Lâm Đó', 'Ngày': '', 'Tổng tiền': '36,000 HOP 36,000'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -363,12 +393,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'MINIMART ANANT', 'Địa chỉ': 'Chợ Sủi Phú Thị Gia Lâm', 'Ngày': 'Ngày: 13/08/2020-17:52', 'Tổng tiền': '3,500 Giá đăng ký:'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -392,12 +429,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'In the coffee house', 'Địa chỉ': '403 Phan Huy Ich, P.14, Q.Gò Vấp', 'Ngày': 'Thời gian:30.09.2020 08.08 Số HĐ: 19809052972020', 'Tổng tiền': 'Khách hàng:'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -421,12 +465,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'FamilyMart', 'Địa chỉ': '213 Nguyễn Văn Cừ, P.4, Q.5', 'Ngày': 'Ngày: 14/07/2017 - Giờ 10:42', 'Tổng tiền': '1122 Bản tưới Nguyễn 4.000 4,000'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -450,12 +501,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'Coffee Kem Sen Trắng', 'Địa chỉ': 'Đường Số 2 - KDC 135 - TT. Bến Lức', 'Ngày': 'Ngày', 'Tổng tiền': '22,000 22,000 Kem Dừa'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -479,12 +537,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': 'MINIMARTANAN', 'Địa chỉ': 'Chợ Sủi Phú Thị Gia Lâm', 'Ngày': 'Ngày: 13/08/2020-08:47', 'Tổng tiền': '291001560000 Xúa xích Bông mai 115g NT'}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/it/Data/thaiphData/Vietnamese-ocr/project/modules/text_detect/modules_craft.py:448: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  polys = np.array(polys)\n",
-      "<ipython-input-2-08c54ab532da>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "<ipython-input-2-4df2fb2e56b1>:6: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if bboxes != []:\n"
      ]
     },
@@ -506,6 +571,13 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nhãn hiệu': '', 'Địa chỉ': '1980 Địa chỉ: 430 Xã Đàn - Quận Đồng Đa, Hà Nội Nội Nội Thời Địa chỉ: 430 Xã Đàn - Phường Nam Đồng - Quận Thuận Đồng Đa, Hà Nội', 'Ngày': 'Ngày 17 tháng 07 năm 2020', 'Tổng tiền': '280,000 280,000'}\n"
+     ]
     }
    ],
    "source": [
